--- a/.env
+++ b/.env
@@ -15,3 +15,10 @@ APP_SECRET=0a7dff2f424e38a56e7c28ea85f8cd26
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL="mysql://root:root@127.0.0.1:3306/password_manager"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=null://localhost
+###< symfony/swiftmailer-bundle ###
