--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,10 @@
 
 # Composer PHAR
 /composer.phar
+
+###> symfony/webpack-encore-pack ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-pack ###
