--- a/composer.json
+++ b/composer.json
@@ -5,21 +5,27 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "friendsofsymfony/user-bundle": "^2.1",
         "sensio/framework-extra-bundle": "^5.2",
+        "symfony/asset": "^4.1",
         "symfony/console": "^4.1",
         "symfony/flex": "^1.0",
         "symfony/form": "^4.1",
         "symfony/framework-bundle": "^4.1",
         "symfony/lts": "^4@dev",
+        "symfony/monolog-bundle": "^3.3",
         "symfony/orm-pack": "^1.0",
         "symfony/security-csrf": "^4.1",
+        "symfony/swiftmailer-bundle": "^3.2",
         "symfony/twig-bundle": "^4.1",
         "symfony/validator": "^4.1",
+        "symfony/webpack-encore-pack": "^1.0",
         "symfony/yaml": "^4.1"
     },
     "require-dev": {
         "symfony/dotenv": "^4.1",
         "symfony/maker-bundle": "^1.5",
+        "symfony/profiler-pack": "^1.0",
         "symfony/web-server-bundle": "^4.1"
     },
     "config": {
