--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,8 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+login:
+   path: /login
+   controller: App\PW\SecurityBundle\Controller\SecurityController::login
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
