--- a/config/packages/fos_user.yaml
+++ b/config/packages/fos_user.yaml
@@ -2,10 +2,11 @@ fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
     user_class: App\Entity\User
+  
   ## To solve the problem
     from_email:
         address: "noreply@yourcompany.com"
         sender_name: "No Reply"
     registration:
         form:
-            type: AppBundle\Form\RegistrationType
+            type: App\Form\UserType
