--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "friendsofsymfony/user-bundle": "^2.1",
+        "rollerworks/password-strength-validator": "^1.1",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/asset": "^4.1",
         "symfony/console": "^4.1",
@@ -19,6 +20,7 @@
         "symfony/security-bundle": "^4.1",
         "symfony/security-csrf": "^4.1",
         "symfony/swiftmailer-bundle": "^3.2",
+        "symfony/translation": "^4.1",
         "symfony/twig-bundle": "^4.1",
         "symfony/validator": "^4.1",
         "symfony/webpack-encore-pack": "^1.0",
