--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "build": "encore production"
     },
     "dependencies": {
-        "sass-loader": "^7.1.0"
+        "sass-loader": "^7.1.0",
+        "yarn": "^1.12.3"
     }
 }
