--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "friendsofsymfony/user-bundle": "^2.1",
+        "jms/serializer-bundle": "^2.4",
         "rollerworks/password-strength-validator": "^1.1",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/asset": "^4.1",
