--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -5,6 +5,7 @@ security:
     role_hierarchy:
         ROLE_ADMIN:       ROLE_ADMIN
         ROLE_SUPER_ADMIN: ROLE_ADMIN
+        ROLE_MEMBER: ROLE_MEMBER
 
     providers:
         fos_userbundle:
